--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,20 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: auto;
+    flex-wrap: wrap;
     flex-direction: column; 
     height: 100vh;
+    padding: 10px;
 }
 
 img {
-    max-width: 720px;
-    width: 100%;
+    max-width: 800px;
+    width: 50%;
     height: auto;
-    border-radius: 10px;
+    border-radius: 0px;
     margin-top: 0px;
-    margin-bottom: 0px; 
+    margin-bottom: 0px;
 }
 
 main {
@@ -33,8 +36,17 @@ main {
     border: 2px solid #000000;
     border-radius: 100px;
     background-color: rgba(0, 0, 0, 0.8);
-    max-width: 640px;
+    max-width: 720px;
     width: 100%;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    main {
+        /* Redefine styles for narrower screens */
+        max-width: 90%; /* Adjust the maximum width as needed */
+        padding: 20px; /* Increase padding for better spacing */
+    }
 }
 
 footer {
@@ -44,7 +56,7 @@ footer {
 
 .tabs {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 15px;
 }
 
