--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     background-image: url('image/laptop.jpg'); 
     background-size: cover;
@@ -14,39 +13,27 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex: auto;
     flex-wrap: wrap;
     flex-direction: column; 
     height: 100vh;
-    padding: 10px;
 }
 
 img {
-    max-width: 800px;
-    width: 50%;
+    max-width: 100%;
     height: auto;
-    border-radius: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    border-radius: 10px;
+    margin-top: 0;
+    margin-bottom: 0; 
 }
 
 main {
     text-align: center;
-    padding: 50px;
+    padding: 20px;
     border: 2px solid #000000;
-    border-radius: 100px;
+    border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.8);
     max-width: 720px;
     width: 100%;
-}
-
-/* Media query for smaller screens */
-@media (max-width: 768px) {
-    main {
-        /* Redefine styles for narrower screens */
-        max-width: 90%; /* Adjust the maximum width as needed */
-        padding: 20px; /* Increase padding for better spacing */
-    }
 }
 
 footer {
@@ -56,7 +43,8 @@ footer {
 
 .tabs {
     display: flex;
-    justify-content: space-around;
+    flex-direction: row; 
+    justify-content: space-evenly;
     margin-bottom: 15px;
 }
 
@@ -66,6 +54,7 @@ footer {
     border: 1px solid red;
     border-radius: 10px;
     transition: background-color 0.3s ease;
+    margin-bottom: 0; 
 }
 
 .tab a {
@@ -92,7 +81,7 @@ footer {
     border-collapse: collapse;
     background-color: black;
     color: #fff; 
-    border-radius: 0px; 
+    border-radius: 10px;
     overflow: hidden; 
 }
 
@@ -104,4 +93,21 @@ footer {
 
 .custom-table tr:nth-child(even) {
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* Media query for smaller screens */
+@media screen and (max-width: 600px) {
+    main {
+        max-width: 90%; 
+    }
+    
+    /* Vertical tabs for smaller screens */
+    .tabs {
+        flex-direction: column; 
+    }
+
+    /* Added margin for separation between vertical tabs */
+    .tab {
+        margin-bottom: 10px; 
+    }
 }
