--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
     font-family: 'Courier New', monospace;
     background-color: #0e0e0e;
     color: #00ff00;
@@ -48,51 +47,30 @@ footer {
     margin-bottom: 15px;
 }
 
-.tab {
-    padding: 10px;
-    cursor: pointer;
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
     border: 1px solid red;
-    border-radius: 10px;
+    cursor: pointer;
+    border-radius: 5px;
     transition: background-color 0.3s ease;
+    color: #fff;
     margin-bottom: 0; 
 }
 
-.tab a {
+.nav-button {
     text-decoration: none;
     color: #00ff00;
 }
 
-.active-tab {
+.active-button {
     background-color: rgba(255, 60, 0, 0.3);
 }
 
-.tab:hover {
+.button:hover {
     background-color: rgba(244, 153, 61, 0.6);
-}
-
-.custom-table th {
-    background-color: #333;
-    color: #00ff00;
-}
-
-.custom-table {
-    width: 100%;
-    border: 1px solid #000;
-    border-collapse: collapse;
-    background-color: black;
-    color: #fff; 
-    border-radius: 10px;
-    overflow: hidden; 
-}
-
-.custom-table td, .custom-table th {
-    border: 1px solid #000;
-    padding: 8px;
-    text-align: left;
-}
-
-.custom-table tr:nth-child(even) {
-    background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* Media query for smaller screens */
@@ -110,4 +88,32 @@ footer {
     .tab {
         margin-bottom: 10px; 
     }
+}
+
+/* Add table styles */
+.table-container {
+    height: 300px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    overflow: auto;
+    margin-top: 20px; 
+    margin: 0 auto;  
+    border-radius: 20px;
+}
+
+.custom-table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: black;
+    color: #00ff00;
+}
+
+.custom-table td, .custom-table th {
+    border: 1px solid #000;
+    padding: 8px;
+    text-align: left;
+}
+
+.custom-table tr:nth-child(even) {
+    background-color: rgba(255, 255, 255, 0.1);
 }
