--- a/files/styles.css
+++ b/files/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('image/laptop.jpg'); 
+    background-image: url('../image/laptop.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -15,6 +15,20 @@ body {
     flex-wrap: wrap;
     flex-direction: column; 
     height: 100vh;
+}
+
+a:link {
+  color: #00ff00;
+}
+
+/* visited link */
+a:visited {
+  color: #00ff00;
+}
+
+/* mouse over link */
+a:hover {
+  color: red;
 }
 
 img {
@@ -99,6 +113,7 @@ footer {
     margin-top: 20px; 
     margin: 0 auto;  
     border-radius: 20px;
+    flex: 1;
 }
 
 .custom-table {
@@ -116,4 +131,10 @@ footer {
 
 .custom-table tr:nth-child(even) {
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+.custom-table caption {
+
+  text-align: left;
+  caption-side: bottom;
 }
