Trying to improve valign on phones

--- a/files/styles.css
+++ b/files/styles.css
@@ -88,10 +88,11 @@ footer {
 }
 
 /* Media query for smaller screens */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
     main {
         max-width: 90%;
         justify-content: top;
+        align-items: flex-start;
     }
     
     /* Vertical tabs for smaller screens */
