--- a/files/styles.css
+++ b/files/styles.css
@@ -96,7 +96,7 @@ main {
     overflow: scroll;
     padding: 20px;
     max-width: 700px;
-    text-align: justify;
+    text-align: left;
 }
 
 .custom-table td, .custom-table th {
