--- a/files/styles.css
+++ b/files/styles.css
@@ -31,9 +31,7 @@ a:hover {
 img {
     max-width: 95%;
     height: auto;
-    border-radius: 10px;
     margin-top: 0;
-    margin-bottom: 0; 
 }
 
 main {
@@ -47,8 +45,9 @@ main {
 .tabs {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 15px;
     flex-direction: column;
+    margin-top: 7px;
+    margin-bottom: 12px; 
     width: 100%;
 }
 
@@ -59,10 +58,9 @@ main {
     text-align: center;
     text-decoration: none;
     border: 1px solid red;
-    cursor: pointer;
+    cursor: crosshair;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    color: #fff;
 }
 
 .nav-button {
@@ -77,6 +75,7 @@ main {
 
 .button:hover {
     background-color: rgba(244, 153, 61, 0.6);
+    color: #ffffff;
 }
 
 .logo-container {
@@ -84,6 +83,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .custom-table {
