--- a/files/styles.css
+++ b/files/styles.css
@@ -97,6 +97,8 @@ main {
     padding: 20px;
     max-width: 700px;
     text-align: left;
+    overflow-x: hidden; 
+    overflow-y: auto; 
 }
 
 .custom-table td, .custom-table th {
