--- a/files/styles.css
+++ b/files/styles.css
@@ -93,12 +93,10 @@ main {
     color: #00ff00;
     flex: 1;
     margin: 0 auto;  
-    overflow: scroll;
+    overflow: auto;
     padding: 20px;
     max-width: 700px;
     text-align: left;
-    overflow-x: hidden; 
-    overflow-y: auto; 
 }
 
 .custom-table td, .custom-table th {
